kubernetes-gitops/canary_flagger_istio/grafana-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-grafana
  namespace: observability
spec:
  hosts:
  - "grafana.yogatour.su"
  gateways:
  - prometheus-grafana
  http:
  - route:
    - destination:
        host: prometheus-grafana
        port:
          number: 80
